--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "reducers": "^3.0.0-alpha",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
+    "redux-saga": "^1.2.1",
     "redux-thunk": "^2.4.1",
     "typescript": "^4.8.3",
     "web-vitals": "^2.1.4"
